--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         }
     },
     "require": {
-        "php": ">=5.3.3"
+        "php": ">=7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0|^6.0|^7.0|^8.0"
+        "phpunit/phpunit": "^6.0|^7.0|^8.0"
     }
 }
