--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "andig/php-shunting-yard",
+    "name": "protonlabs/php-shunting-yard",
     "type": "library",
     "keywords": ["math","shunting yard", "equation"],
     "homepage": "https://github.com/andig/php-shunting-yard",
